# camf

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  LICENSES.md  NOTICE  README.md  conftest.py  pyproject.toml  reproduce.py
.github/workflows/: ci.yml
audit/: checklist.md  opinion_template.md
camf/: __init__.py  canon.py  diagnostics.py  model.py  package.py
examples/: LICENSE
examples/defects/: cycle_nonproductive.csv  dangling.csv  mass_gap.csv  missing_source.csv
examples/minimal/: EXPECTED.md  edges.csv  psi.json
spec/: CAMF-1.0.md  LICENSE  canonicalization.md  package.schema.json  psi.schema.json
tests/: test_canon.py  test_diagnostics.py  test_merkle.py  test_model.py  test_package.py  test_reproduce.py  test_schemas.py
tools/: anonymize.sh
